{
  "version": 4,
  "terraform_version": "0.12.16",
  "serial": 489,
  "lineage": "0392e05c-edd8-d0f3-586f-db5b52a5f44a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default-public-sec-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:security-group/sg-0babfd4381496e94e",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0babfd4381496e94e",
            "ingress": [],
            "name": "default",
            "owner_id": "720843601896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "allow-all-inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0ef7a91ed074652"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion-host-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.128.254.254",
            "association_id": "eipassoc-0e18838ff81f1a5c6",
            "domain": "vpc",
            "id": "eipalloc-08de06e582863c436",
            "instance": "i-0a1dfb9a09cb3da95",
            "network_interface": "eni-0ce35afcf0b9027be",
            "private_dns": "ip-10-128-254-254.ap-southeast-2.compute.internal",
            "private_ip": "10.128.254.254",
            "public_dns": "ec2-13-210-131-31.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.210.131.31",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "bastion"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion-host",
            "aws_internet_gateway.dev-internet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public-natgw-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-d883ea24",
            "domain": "vpc",
            "id": "eipalloc-05cb183cf78b4a476",
            "network_interface": "eni-00d76f7c231d5585d",
            "private_dns": "ip-10-128-254-202.ap-southeast-2.compute.internal",
            "private_ip": "10.128.254.202",
            "public_dns": "ec2-52-62-56-65.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.56.65",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "public-natgw-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1a4d97d4af3009b",
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:instance/i-0a1dfb9a09cb3da95",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1dfb9a09cb3da95",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce35afcf0b9027be",
            "private_dns": "ip-10-128-254-254.ap-southeast-2.compute.internal",
            "private_ip": "10.128.254.254",
            "public_dns": "ec2-13-210-131-31.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.210.131.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0845bf8925b3ba839",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd30258f7dc77d9c",
            "tags": {
              "Environment": "dev",
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05a7addeaa15cc480",
              "sg-0babfd4381496e94e"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-public-sec-group",
            "aws_internet_gateway.dev-internet-gateway",
            "aws_security_group.allow-restricted-ssh",
            "aws_subnet.public-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-host",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1a4d97d4af3009b",
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:instance/i-00495ef05b4ccbff2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00495ef05b4ccbff2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095c5512f2d11fa89",
            "private_dns": "ip-10-128-128-207.ap-southeast-2.compute.internal",
            "private_ip": "10.128.128.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a2e005dc0f72ba58",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d0915647f7b6314",
            "tags": {
              "Environment": "dev",
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00b2438302a6d07e3",
              "sg-0babfd4381496e94e"
            ]
          },
          "dependencies": [
            "aws_default_security_group.default-public-sec-group",
            "aws_eip.bastion-host-eip",
            "aws_instance.bastion-host",
            "aws_security_group.allow-bastion-ssh",
            "aws_subnet.frontend-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-internet-gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08aecc6061b565ea8",
            "owner_id": "720843601896",
            "tags": {
              "Environment": "dev",
              "Name": "public-internet-gateway"
            },
            "vpc_id": "vpc-0b0ef7a91ed074652"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public-natgw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cb183cf78b4a476",
            "id": "nat-0c6cb287b68310de9",
            "network_interface_id": "eni-00d76f7c231d5585d",
            "private_ip": "10.128.254.202",
            "public_ip": "52.62.56.65",
            "subnet_id": "subnet-0cd30258f7dc77d9c",
            "tags": {
              "Environment": "dev",
              "Name": "public-natgw"
            }
          },
          "dependencies": [
            "aws_eip.public-natgw-eip",
            "aws_subnet.public-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontend-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c9b6aec13a1560ec",
            "owner_id": "720843601896",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c6cb287b68310de9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "frontend-route-table"
            },
            "vpc_id": "vpc-0b0ef7a91ed074652"
          },
          "dependencies": [
            "aws_nat_gateway.public-natgw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-053bb7ef3418164d0",
            "owner_id": "720843601896",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08aecc6061b565ea8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "public-route-table"
            },
            "vpc_id": "vpc-0b0ef7a91ed074652"
          },
          "dependencies": [
            "aws_internet_gateway.dev-internet-gateway",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "frontend-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099209f64396bb895",
            "route_table_id": "rtb-0c9b6aec13a1560ec",
            "subnet_id": "subnet-09d0915647f7b6314"
          },
          "dependencies": [
            "aws_eip.public-natgw-eip",
            "aws_nat_gateway.public-natgw",
            "aws_route_table.frontend-route-table",
            "aws_subnet.frontend-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c40a52c31eef70b",
            "route_table_id": "rtb-053bb7ef3418164d0",
            "subnet_id": "subnet-0cd30258f7dc77d9c"
          },
          "dependencies": [
            "aws_internet_gateway.dev-internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-bastion-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:security-group/sg-00b2438302a6d07e3",
            "description": "allow-bastion-ssh",
            "egress": [],
            "id": "sg-00b2438302a6d07e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.128.254.254/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-bastion-ssh",
            "name_prefix": null,
            "owner_id": "720843601896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "allow-bastion-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0ef7a91ed074652"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-restricted-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:security-group/sg-05a7addeaa15cc480",
            "description": "allow-restricted-ssh",
            "egress": [],
            "id": "sg-05a7addeaa15cc480",
            "ingress": [
              {
                "cidr_blocks": [
                  "118.189.200.235/32",
                  "52.76.64.154/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-restricted-ssh",
            "name_prefix": null,
            "owner_id": "720843601896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "allow-restricted-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0ef7a91ed074652"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-bastion-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.128.254.254/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1182049590",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00b2438302a6d07e3",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-bastion-ssh",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-restricted-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "118.189.200.235/32",
              "52.76.64.154/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1770501911",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05a7addeaa15cc480",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.allow-restricted-ssh",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontend-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:subnet/subnet-09d0915647f7b6314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.128.128.0/24",
            "id": "subnet-09d0915647f7b6314",
            "map_public_ip_on_launch": false,
            "owner_id": "720843601896",
            "tags": {
              "Environment": "dev",
              "Name": "frontend-subnet-a"
            },
            "vpc_id": "vpc-0b0ef7a91ed074652"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:subnet/subnet-0cd30258f7dc77d9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.128.254.0/24",
            "id": "subnet-0cd30258f7dc77d9c",
            "map_public_ip_on_launch": false,
            "owner_id": "720843601896",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0b0ef7a91ed074652"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:720843601896:vpc/vpc-0b0ef7a91ed074652",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-067b4002f8b48148a",
            "default_route_table_id": "rtb-0f7de7c1f55156301",
            "default_security_group_id": "sg-0babfd4381496e94e",
            "dhcp_options_id": "dopt-a446dfc0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b0ef7a91ed074652",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f7de7c1f55156301",
            "owner_id": "720843601896",
            "tags": {
              "Environment": "dev",
              "Name": "public-vpc"
            }
          }
        }
      ]
    }
  ]
}